--- a/hooks/build
+++ b/hooks/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 # $IMAGE_NAME var is injected into the build so the tag is correct.
-git clone https://github.com/WordPress/WordPress.git website/wordpress
+git clone -b '4.8.3' --single-branch https://github.com/WordPress/WordPress.git website/wordpress
 docker build --build-arg VCS_REF=`git rev-parse --short HEAD` \
             --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
             --build-arg VERSION=`cat VERSION` \
